--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_splash_screen: ^1.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +64,10 @@ flutter:
   assets:
    - images/background.jpg
    - images/logo.png
+   - images/signin.png
+   - images/buzzclanlogo.png
+   - images/google_logo.png
+   - images/google_logo.ico
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
